A new version of My Tester is out. It is only for Composer 2.2 or later. It removes previously deprecated stuff.

For complete list of changes since previous version, see CHANGELOG.md.